ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-186-rip-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: zerossl-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/router.middlewares: edge-network-middleware@file

spec:
  tls:
    - secretName: ip-186-rip-tls
      hosts:
        - ip.186.rip
  rules:
    - host: ip.186.rip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ip-186-rip-svc
                port:
                  number: 80
